RESOLVED FIXED211116
[GTK] Fix build failures for ANGLE_WEBGL after r259589
https://bugs.webkit.org/show_bug.cgi?id=211116
Summary [GTK] Fix build failures for ANGLE_WEBGL after r259589
ChangSeok Oh
Reported 2020-04-27 23:08:29 PDT
SISA.
Attachments
Patch (5.99 KB, patch)
2020-04-27 23:25 PDT, ChangSeok Oh
no flags
ChangSeok Oh
Comment 1 2020-04-27 23:25:18 PDT
EWS Watchlist
Comment 2 2020-04-27 23:26:13 PDT
Note that there are important steps to take when updating ANGLE. See http://trac.webkit.org/wiki/UpdatingANGLE
Kenneth Russell
Comment 3 2020-04-28 13:38:36 PDT
Comment on attachment 397811 [details] Patch LGTM but I don't have reviewer privileges. Maybe dino@ can help review.
Kenneth Russell
Comment 4 2020-04-28 15:23:16 PDT
Maybe achristensen@ can help review this too?
EWS
Comment 5 2020-04-28 15:42:28 PDT
Committed r260852: <https://trac.webkit.org/changeset/260852> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397811 [details].
Note You need to log in before you can comment on or make changes to this bug.