[GTK] Fix build failures for ANGLE_WEBGL after r259589 https://bugs.webkit.org/show_bug.cgi?id=211116

Reviewed by Alex Christensen.

Source/ThirdParty/ANGLE:

The ANGLE_WEBGL is broken after ANGLE is updated in r259589. Missing sources
should be added to the build target.

* PlatformGTK.cmake: Add libangle_gl_egl_sources and libangle_gl_egl_dl_sources.

Source/WebCore:

The compiler is unhappy with coverting GCGLint64 (long long int) to GLInt64 (long int).
Passing GCGLuint62 as GLuint64 is a similar issue.

No new tests since no new functionalities.

* platform/graphics/angle/ExtensionsGLANGLE.cpp:
(WebCore::ExtensionsGLANGLE::getInteger64vRobustANGLE):
(WebCore::ExtensionsGLANGLE::getInteger64i_vRobustANGLE):
(WebCore::ExtensionsGLANGLE::getBufferParameteri64vRobustANGLE):
(WebCore::ExtensionsGLANGLE::getQueryObjecti64vRobustANGLE):
(WebCore::ExtensionsGLANGLE::getQueryObjectui64vRobustANGLE):
* platform/graphics/nicosia/texmap/NicosiaGC3DLayer.cpp:
(Nicosia::GC3DLayer::swapBuffersIfNeeded): Unaccelerated -> RenderingMode::Unaccelerated


Canonical link: https://commits.webkit.org/224045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260852 268f45cc-cd09-0410-ab3c-d52691b4dbfc